--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -11,14 +11,18 @@ path = "src/main.rs"
 anchor-client = { version = "0.29.0", features = ["async"] }
 anyhow = "1.0.93"
 rust-ini = "0.21.1"
-raydium-amm-v3 = {git = "https://github.com/raydium-io/raydium-clmm.git", rev = "17582bf74ea6a19cb87655197604544b1858747c", features = ["no-entrypoint", "client"]}
+# raydium-amm-v3 = {git = "https://github.com/raydium-io/raydium-clmm.git", rev = "17582bf74ea6a19cb87655197604544b1858747c", features = ["no-entrypoint", "client"]}
 serde_json = { version = "1.0.78" }
 shellexpand = "3.1.0"
-solana-account-decoder = ">=1.14, <1.17"
-solana-client = ">=1.14, <1.17"
-solana-rpc-client = { version = ">=1.14, <1.17" }
-solana-sdk = ">=1.14, <1.17"
-spl-associated-token-account = { version = "2.2.0", features = ["no-entrypoint"]}
+solana-account-decoder = "1.17.3"
+solana-client = "1.17.3"
+# solana-rpc-client = { version = ">=1.14, <1.17" }
+solana-sdk = "1.17.3"
+# solana-rpc-client = { version = "1.17.3" }
+
+# solana-sdk = ">=1.14, <1.17"
+# solana-sdk = ">=1.14, <1.17"
+spl-associated-token-account = { version = "^2.0.0", features = ["no-entrypoint"]}
 spl-memo = "4.0.0"
 spl-token = { version = "4.0.0", features=["no-entrypoint"] }
 spl-token-2022 = { version = "0.9.0", features = ["no-entrypoint"]}
