--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -16,7 +16,7 @@ serde_json = { version = "1.0.78" }
 shellexpand = "3.1.0"
 solana-account-decoder = "<1.17.0"
 solana-client = "<1.17.0"
-# solana-rpc-client = { version = ">=1.14, <1.17" }
+solana-rpc-client = "<1.17.0"
 solana-sdk = "<1.17.0"
 spl-associated-token-account = { version = "^2.0.0", features = ["no-entrypoint"]}
 spl-memo = "4.0.0"
